--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -126,7 +126,7 @@
   "NumberOfSpots": "スポット数",
   "ErrorMsgAddSpot": "1つのプランに追加できるスポット数は最大6スポットです。",
   "SearchByKeyword": "キーワード検索",
-  "AreaAndCommitment": "エリア・こだわり選択",
+  "AreaAndCommitment": "エリア・カテゴリー選択",
   "RemojuStaff": "Remoju スタッフ",
   "Results": "件",
   "Movement": "移動",
