--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,6 +43,7 @@
   "TimeRequired": "req. time",
   "RemojuRecommended": "Remoju plans",
   "UserSubmissionPlan": "User plans",
+  "FindEveryoneRecommendations": "Find everyone recommendations.",
   "EditPlan": "Edit",
   "DeletePlan": "Delete",
   "Application": "Pending",
