--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,6 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
+  "FindEveryoneRecommendations": "みんなのおすすめを探す",
   "EditPlan": "プラン編集",
   "DeletePlan": "削除する",
   "Application": "公開申請中",
