--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -188,7 +188,8 @@
   "startTimeEx": "00:00",
   "EnterThePlanName": "プラン名を入れよう（最大20文字）",
   "PlanNameEx": "（例）海のきれいな街で日帰り女子旅♡",
-  "PlanExplanationEx": "プラン全体のおすすめポイント",
+  "PlanExplanationEx": "プランのメモ",
+  "labelClear":"クリア",
   "MemoEx": "スポットのおすすめポイント",
   "SelectAPhoto": "写真を選択しよう（最大8枚）",
   "SaveDraft": "下書き保存",
@@ -218,9 +219,9 @@
   "Continue":"続きを見る",
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
-  "MakeMyPlan": "myプランを作る",
-  "SetDeparturePoint": "出発地を設定",
-  "SetDestination": "到着地を設定",
+  "MakeMyPlan": "旅プランを作る",
+  "SetDeparturePoint": "出発地の設定",
+  "SetDestination": "到着地の設定",
   "PointOfDeparture": "出発地",
   "ArrivalPlace": "到着地",
   "Remove": "削除",
