--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -252,7 +252,7 @@
   "NewPlanConfirm": "編集中の内容は削除されます。新たにプランを作成しますか？",
   "ResetPlanConfirm": "最近の変更が失われます。よろしいですか？",
   "EdifPlanComment": "編集中の内容を",
-  "CreatePlanComment": "作成中の内容を",
+  "CreatePlanComment": "作成中のプランを",
   "Set": "設定",
   "GoogleKeyword": "場所や住所を検索しよう！",
   "StartSearch": "出発地を設定",
@@ -264,5 +264,8 @@
   "MyPlan#Sec5":"(最大６スポットまで)",
   "ReportPlanUser": "プランを違反報告",
   "ReportPlanUserConfirmTitle": "不適切なプランを報告しますか？",
-  "ReportPlanUserConfirmText": "ご報告いただいたプランについて、担当者が数営業日以内に確認します。"
+  "ReportPlanUserConfirmText": "ご報告いただいたプランについて、担当者が数営業日以内に確認します。",
+  "Selectimagespot": "スポットのイメージ画像を選択",
+  "Roundspot": "周遊スポット",
+  "Max6spots": "最大６ヶ所"
 }
