--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -151,6 +151,7 @@
   "GoogleSpot": "This place has not been introduced by Remoju. We are getting the location from Google Maps.",
   "Welcome": "Welcome to",
   "San": "",
+  "Sanno": "'s ",
   "PleaseLogin": "Please login",
   "MakeATripPlan": "Make a travel plan",
   "SearchBySpot": "Search by spot",
