--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -151,6 +151,7 @@
   "GoogleSpot": "Remojuではまだご紹介していないスポットです。Googleマップから場所を取得しています。",
   "Welcome": "ようこそ",
   "San": "さん",
+  "Sanno": "さんの",
   "PleaseLogin": "ログインしてください",
   "MakeATripPlan": "旅プランを作成",
   "SearchBySpot": "スポットから探す",
