--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -268,5 +268,6 @@
   "ReportPlanUserConfirmText": "ご報告いただいたプランについて、担当者が数営業日以内に確認します。",
   "Selectimagespot": "スポットのイメージ画像を選択",
   "Roundspot": "周遊スポット",
-  "Max6spots": "最大６ヶ所"
+  "Max6spots": "最大６ヶ所",
+  "Option": "※オプション"
 }
