upd09052105 pulans/detail

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -58,6 +58,7 @@
   "AreaFeature": "Area Feature List",
   "Review": "Review",
   "BasicInfomation": "Spot Information",
+  "MoreInformation": "詳細情報",
   "NearbySpots": "Near by Spot",
   "ChooseSeeThis": "People who viewed this spot also look at",
   "Contributor": "Contributor",
