--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -57,8 +57,9 @@
   "PlanList": "プラン一覧",
   "AreaFeature": "エリア特集記事一覧",
   "Review": "レビュー投稿",
-  "BasicInfomation": "スポット情報",
-  "NearbySpots": "近くのスポット",
+  "BasicInfomation": "基本情報",
+  "MoreInformation": "詳細情報",
+  "NearbySpots": "近くにあるおすすめスポット",
   "ChooseSeeThis": "このスポットを見た人におすすめ",
   "Contributor": "投稿者",
   "Registration": "登録",
@@ -122,7 +123,7 @@
   "Gender": "性別",
   "Characters": "文字",
   "editCoverImage": "カバー写真を変更",
-  "Article": "この記事を書いた人",
+  "Article": "投稿者のプロフィール",
   "RecommendedPlanwithSpot": "このスポットを含むおすすめプラン",
   "NumberOfSpots": "スポット数",
   "ErrorMsgAddSpot": "1つのプランに追加できるスポット数は最大6スポットです。",
