--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -270,5 +270,6 @@
   "Selectimagespot": "スポットのイメージ画像を選択",
   "Roundspot": "周遊スポット",
   "Max6spots": "最大６ヶ所",
-  "Option": "※オプション"
+  "Option": "※オプション",
+  "AddToPlanOnly": "ここだけプランに入れる"
 }
