--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -31,7 +31,7 @@
   "Hour": "時間",
   "Minute": "分",
   "Count": "件",
-  "AddToPlan": "myプランに入れる",
+  "AddToPlan": "プランに入れる",
   "PaginationThrough": "～",
   "PaginationOf": "件目 ／ ",
   "PaginationItem": "件",
