--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -44,6 +44,7 @@
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
   "FindEveryoneRecommendations": "みんなのおすすめを探す",
+  "BackEveryoneRecommendations": "みんなのおすすめへ戻る",
   "EditPlan": "プラン編集",
   "DeletePlan": "削除する",
   "Application": "公開申請中",
