--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,6 +44,7 @@
   "RemojuRecommended": "Remoju plans",
   "UserSubmissionPlan": "User plans",
   "FindEveryoneRecommendations": "Find everyone recommendations.",
+  "BackEveryoneRecommendations": "みんなのおすすめへ戻る",
   "EditPlan": "Edit",
   "DeletePlan": "Delete",
   "Application": "Pending",
