--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -109,7 +109,7 @@
   "TravelRoute": "移動経路",
   "RemoveFromPlan": "プランから削除",
   "UserProfile": "プロフィール",
-  "MyplanList": "myプラン",
+  "MyplanList": "プラン",
   "Favorite": "お気に入り",
   "CreatePlan":"旅プランをつくる",
   "UserProfileSaved": "プロフィールを保存しました。",
