--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "みんなのおすすめを探す",
+  "FindEveryoneRecommendations": "みんなのおすすめを見る",
   "BackEveryoneRecommendations": "みんなのおすすめへ戻る",
   "EditPlan": "プラン編集",
   "DeletePlan": "削除する",
