--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -274,5 +274,7 @@
   "Option": "※オプション",
   "AddToPlanOnly": "ここだけプランに入れる",
   "SpotAllClearConfirm": "スポットをすべて削除します。よろしいですか？",
-  "SavePlanConfirm": "プランを保存します。よろしいですか？"
+  "SavePlanConfirm": "プランを保存します。よろしいですか？",
+  "isEdit":"編集する",
+  "isSave":"保存する"
 }
