REMOJU-367 プラン作成　仕様変更

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -252,7 +252,8 @@
   "ReportReviewConfirmText": "A specialist will review your report within a few business days.",
   "ReportReviewComplete": "Thank you for reporting.",
   "ReportedReviewComplete": "Reported successfully.",
-  "NewPlanConfirm": "You did not save your changes. Are you sure you want to exit?",
+  "NewPlanConfirmTitle": "Are you sure you want to exit?",
+  "NewPlanConfirmText": "You did not save your changes.",
   "ResetPlanConfirm": "You did not save your changes. Are you sure you want to exit?",
   "EdifPlanComment": "Editting",
   "CreatePlanComment": "Editting",
