--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -252,7 +252,8 @@
   "ReportReviewConfirmText": "ご報告いただいたレビューについて、担当者が数営業日以内に確認します。",
   "ReportReviewComplete": "ご報告いただきましてありがとうございました。",
   "ReportedReviewComplete": "報告済みです。ありがとうございました。",
-  "NewPlanConfirm": "編集中の内容は削除されます。新たにプランを作成しますか？",
+  "NewPlanConfirmTitle": "新たにプランを作成しますか？",
+  "NewPlanConfirmText": "編集中の内容は削除されます。",
   "ResetPlanConfirm": "最近の変更が失われます。よろしいですか？",
   "EdifPlanComment": "編集中の内容を",
   "CreatePlanComment": "作成中のプランを",
