--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -223,6 +223,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
+  "ArragePlan": "アレンジする",
   "SetDeparturePoint": "出発地の設定",
   "SetDestination": "到着地の設定",
   "PointOfDeparture": "出発地",
