--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -267,6 +267,7 @@
   "MyPlan#Sec3":"on each page",
   "MyPlan#Sec4":"to create your own travel plan!",
   "MyPlan#Sec5":"(Up to 6 spots)",
+  "MyPlan#notice":"※保存・共有にはログインが必要です",
   "ReportPlanUser": "プランを違反報告",
   "ReportPlanUserConfirmTitle": "不適切なプランを報告しますか？",
   "ReportPlanUserConfirmText": "ご報告いただいたプランについて、担当者が数営業日以内に確認します。",
