--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -174,7 +174,7 @@
   "EditProfile": "プロフィールを編集する",
   "Logout": "ログアウト",
   "DeleteAllCurrentSpots": "現在のスポットを全て削除します",
-  "CreatingNewPlan": "新規プラン作成",
+  "CreatingNewPlan": "新規プラン",
   "SpotBrowsingHistory": "最近見たスポット",
   "PlanBrowsingHistory": "最近見たプラン",
   "station": "駅",
@@ -223,7 +223,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "アレンジする",
+  "ArragePlan": "プランを編集する",
   "SetDeparturePoint": "出発地の設定",
   "SetDestination": "到着地の設定",
   "PointOfDeparture": "出発地",
@@ -259,14 +259,15 @@
   "EdifPlanComment": "編集中の内容を",
   "CreatePlanComment": "作成中のプランを",
   "Set": "設定",
-  "GoogleKeyword": "場所や住所を検索しよう！",
+  "GoogleKeyword": "住所や地名で指定してください。",
   "StartSearch": "出発地を設定",
   "EndSearch": "到着地を設定",
   "MyPlan#Sec1":"みんなのおすすめを参考に",
-  "MyPlan#Sec2":"オリジナルの旅行プランが作れます。",
-  "MyPlan#Sec3":"次はどんな所に行きたいですか？",
+  "MyPlan#Sec2":"オリジナル休日プランが作れます。",
+  "MyPlan#Sec3":"次は、どこに行きたいですか？",
   "MyPlan#Sec4":"又は",
   "MyPlan#Sec5":"一覧から探す",
+  "MyPlan#notice":"※保存・共有にはログインが必要です",
   "ReportPlanUser": "プランを違反報告",
   "ReportPlanUserConfirmTitle": "不適切なプランを報告しますか？",
   "ReportPlanUserConfirmText": "ご報告いただいたプランについて、担当者が数営業日以内に確認します。",
