--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -185,6 +185,7 @@
   "EditPlanConfirmTitle": "There is a plan being edited.  (Select OK to display the plan being edited. Select Cancel to discard the changes.)",
   "EditPlanConfirmText": "Do you want to save your changes?",
   "Close": "Close",
+  "Open": "Open",
   "PlanSaved": "saved",
   "PlanClearConfirm": "Are you sure to discard this plan?",
   "ShareYourOwnTrip": "Share your trip",
@@ -284,5 +285,7 @@
   "ViewReview":"投稿したレビューを見る",
   "NoReviewMsg":"投稿中のレビューはありません",
   "LogoutConfirmTitle": "ログアウトしますか？(未保存のプランがあります)",
-  "LogoutConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。"
+  "LogoutConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
+  "NearestSt": "最寄駅",
+  "SearchGuide": "「温泉」「京都女子旅」..."
 }
