--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -83,7 +83,7 @@
   "Save": "保存",
   "AddSpot": "スポットを追加する",
   "BatchClear": "破棄",
-  "ErrorMsgRequiredPlanName": "プラン名を入力してください。",
+  "ErrorMsgRequiredPlanName": "保存には、プラン名が必要です。プラン名を入力してください。",
   "Copy": "コピー",
   "Access": "アクセス",
   "DirectionsFromCurrentLocation": "現在地からの行き方",
@@ -167,7 +167,7 @@
   "SeeOther": "その他",
   "PlanSubmission": "プラン投稿",
   "PlanSubmissionSub": "myプランを投稿する",
-  "EditPlanProgress": "作成中旅行プランを編集する",
+  "EditPlanProgress": "プランを編集する",
   "ViewSavedPlans": "保存したmyプランを見る",
   "ViewMyPage": "マイページ",
   "ViewFavorite": "お気に入りを見る",
@@ -203,7 +203,7 @@
   "ShareYourPlanWithOtherUsers": "自分のプランを他のユーザーにも共有しよう",
   "CreatedPlanSaveTitle": "作成したプランを保存しました。",
   "CreatedPlanSaveText": "他のユーザーが投稿したプランを見ますか？",
-  "NoSpotName": "スポット名を入力してください。",
+  "NoSpotName": "保存にはスポット名が必要です。スポット名を入力してください。",
   "NoSpot": "住所を直接入力する",
   "RegisterSpot": "スポットを登録",
   "NoReview": "まだレビューがありません。",
@@ -254,8 +254,8 @@
   "ReportReviewConfirmText": "ご報告いただいたレビューについて、担当者が数営業日以内に確認します。",
   "ReportReviewComplete": "ご報告いただきましてありがとうございました。",
   "ReportedReviewComplete": "報告済みです。ありがとうございました。",
-  "NewPlanConfirmTitle": "新たにプランを作成しますか？",
-  "NewPlanConfirmText": "編集中の内容は削除されます。",
+  "NewPlanConfirmTitle": "新規にプランを作成しますか？",
+  "NewPlanConfirmText": "作成中の内容は削除されます。",
   "ResetPlanConfirm": "最近の変更が失われます。よろしいですか？",
   "EdifPlanComment": "編集中の内容を",
   "CreatePlanComment": "作成中のプランを",
@@ -289,5 +289,6 @@
   "NearestSt": "最寄駅",
   "SearchGuide": "「温泉」「京都女子旅」..." ,
   "CreateNew": "新規作成する",
-  "LoginConfirmTitle": "ログイン画面に遷移します。よろしいですか？"
+  "LoginConfirmTitle": "ログイン画面に遷移します。よろしいですか？",
+  "RequiredPlanName": "プラン名を入力してください。"
 }
