--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -290,5 +290,7 @@
   "SearchGuide": "「温泉」「京都女子旅」...",
   "CreateNew": "新規作成する",
   "LoginConfirmTitle": "プランの保存には、ログインが必要です。ログイン画面(ユーザ登録画面)に移動しますか？",
-  "RequiredPlanName": "Please enter the title."
+  "RequiredPlanName": "Please enter the title.",
+  "InplanCount":"プランに入れた人",
+  "ReviewRate":"レビュー評価"
 }
