--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -290,5 +290,7 @@
   "SearchGuide": "「温泉」「京都女子旅」..." ,
   "CreateNew": "新規作成する",
   "LoginConfirmTitle": "ログイン画面に遷移します。よろしいですか？",
-  "RequiredPlanName": "プラン名を入力してください。"
+  "RequiredPlanName": "プラン名を入力してください。",
+  "InplanCount":"プランに入れた人",
+  "ReviewRate":"レビュー評価"
 }
