--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -289,7 +289,7 @@
   "NearestSt": "最寄駅",
   "SearchGuide": "「温泉」「京都女子旅」..." ,
   "CreateNew": "新規作成する",
-  "LoginConfirmTitle": "ログイン画面に遷移します。よろしいですか？",
+  "LoginConfirmTitle": "プランの保存には、ログインが必要です。ログイン画面(ユーザ登録画面)に移動しますか？",
   "RequiredPlanName": "プラン名を入力してください。",
   "InplanCount":"プランに入れた人",
   "ReviewRate":"レビュー評価"
