REMOJU-385 2-1_ログイン後_ログイン・プランバスケット_nakai デザイン修正

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -192,14 +192,14 @@
   "startTimeEx": "00:00",
   "EnterThePlanName": "プラン名を入れよう（最大20文字）",
   "PlanNameEx": "（例）海のきれいな街で日帰り女子旅♡",
-  "PlanExplanationEx": "プランのメモ",
+  "PlanExplanationEx": "どんな旅にしたいですか？（フリーメモ）",
   "labelClear":"クリア",
   "MemoEx": "このスポットのおすすめポイント",
   "SelectAPhoto": "写真を選択しよう（最大8枚）",
   "SaveDraft": "下書き保存",
   "Release": "公開",
   "Private": "非公開",
-  "SelectAnAreaCategory": "エリア・こだわりを選択しよう",
+  "SelectAnAreaCategory": "エリア・こだわりも選べます",
   "ShareYourPlanWithOtherUsers": "自分のプランを他のユーザーにも共有しよう",
   "CreatedPlanSaveTitle": "作成したプランを保存しました。",
   "CreatedPlanSaveText": "他のユーザーが投稿したプランを見ますか？",
@@ -244,7 +244,7 @@
   "PrivateSaved": "非公開にしました",
   "DuringRouteCalculation": "経路計算中・・・",
   "SpotNameEx": "スポット名",
-  "SpotExplanationEx": "このスポットで何をしますか？（メモ）",
+  "SpotExplanationEx": "このでは何をしますか？（フリーメモ）",
   "FavoriteRemoveConfirm": "お気に入りを削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
   "PlanName": "プラン名",
