--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -63,7 +63,7 @@
   "NearbySpots": "近くにあるおすすめスポット",
   "ChooseSeeThis": "このスポットを見た人におすすめ",
   "Contributor": "投稿者",
-  "Registration": "登録",
+  "Registration": "保存する",
   "Registered": "登録済",
   "FBshare": "シェア",
   "TWtweet": "ツィート",
@@ -84,7 +84,7 @@
   "AddSpot": "スポットを追加する",
   "BatchClear": "破棄",
   "ErrorMsgRequiredPlanName": "保存には、プラン名が必要です。プラン名を入力してください。",
-  "Copy": "コピー",
+  "Copy": "リンクのコピー",
   "Access": "アクセス",
   "DirectionsFromCurrentLocation": "現在地からの行き方",
   "SelectPhoto": "プロフィール写真を編集",
@@ -142,7 +142,7 @@
   "FeaturesOfThisPlan": "プランの特徴",
   "RecommendedSpotsInTheSameArea": "近くのおすすめスポット",
   "FeaturedLink": "同じエリアのおすすめ特集",
-  "SharePlan": "URL共有",
+  "SharePlan": "リンク共有",
   "SharePlanSave": "このURLは、みんなに非公開のまま、共有したお友達のみ閲覧できます。",
   "SharePlanNoSave": "このプランをURLで共有するには、編集画面から保存してください。このURLは、みんなに非公開のまま、共有したお友達のみ閲覧できます。",
   "MyPage": "マイページ",
@@ -245,7 +245,7 @@
   "DuringRouteCalculation": "経路計算中・・・",
   "SpotNameEx": "スポット名",
   "SpotExplanationEx": "このでは何をしますか？（フリーメモ）",
-  "FavoriteRemoveConfirm": "お気に入りを削除しますか？",
+  "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
   "PlanName": "プラン名",
   "MyplanSelectPhoto": "写真を選択",
