REMOJU-387 プラン公開　みんなへのメッセージを入力可能にする

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,7 +75,7 @@
   "EnterPlanName": "Enter the plan title to save.",
   "SpotDeleted": "The spot has been deleted.",
   "StartTime": "Departure",
-  "Memo": "Take notes.",
+  "Memo": "みんなへのメッセージ",
   "ShareUrl": "Shared url",
   "SavePlan": "Save plan",
   "OK": "OK",
