--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -75,7 +75,7 @@
   "EnterPlanName": "保存するプラン名を入力",
   "SpotDeleted": "スポットを削除しました。",
   "StartTime": "出発時間",
-  "Memo": "メモをする",
+  "Memo": "みんなへのメッセージ",
   "ShareUrl": "共有URL",
   "SavePlan": "プランを保存",
   "OK": "はい",
