--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -295,5 +295,6 @@
   "ReviewRate":"レビュー評価",
   "AutoSearchConfirmTitle": "最短ルートを検索します。よろしいですか？",
   "AutoSearchConfirmText": "<span class='route'>出発地 ：<br>　{0}<br>到着地 ：<br>　{1}</span>",
-  "ErrorMsgAuto": "最短ルートの検索には4スポット以上必要です。"
+  "ErrorMsgAuto": "最短ルートの検索には4スポット以上必要です。",
+  "Optimized": "最適化済です。"
 }
