--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -294,7 +294,7 @@
   "InplanCount":"プランに入れた人",
   "ReviewRate":"レビュー評価",
   "AutoSearchConfirmTitle": "最短ルートを検索します。よろしいですか？",
-  "AutoSearchConfirmText": "<span class='route'>出発地 ：<br>　{0}<br>到着地 ：<br>　{1}</span>",
+  "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
   "ErrorMsgAuto": "最短ルートの検索には4スポット以上必要です。",
   "Optimized": "最適化済です。"
 }
