REMOJU-395 漆畑さんのメール対応12/5

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -244,7 +244,7 @@
   "PrivateSaved": "非公開にしました",
   "DuringRouteCalculation": "経路計算中・・・",
   "SpotNameEx": "スポット名",
-  "SpotExplanationEx": "このでは何をしますか？（フリーメモ）",
+  "SpotExplanationEx": "ここでは何をしますか？（フリーメモ）",
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
   "PlanName": "プラン名",
