--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -224,7 +224,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "プランを編集する",
+  "ArragePlan": "プラン作成",
   "SetDeparturePoint": "出発地の設定",
   "SetDestination": "到着地の設定",
   "PointOfDeparture": "出発地",
