--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -126,7 +126,7 @@
   "editCoverImage": "カバー写真を変更",
   "Article": "投稿者のプロフィール",
   "RecommendedPlanwithSpot": "このスポットを含むおすすめプラン",
-  "NumberOfSpots": "スポット数",
+  "NumberOfSpots": "巡ったスポット",
   "ErrorMsgAddSpot": "1つのプランに追加できるスポット数は最大6スポットです。",
   "SearchByKeyword": "キーワード検索",
   "AreaAndCommitment": "エリア・カテゴリー選択",
