REMOJU-446 日本語べた書きを辞書へ登録

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -296,5 +296,26 @@
   "AutoSearchConfirmTitle": "最短ルートを検索します。よろしいですか？",
   "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
   "ErrorMsgAuto": "最短ルートの検索には4スポット以上必要です。",
-  "Optimized": "最適化済です。"
+  "Optimized": "最適化済です。",
+  "AgeAnnounced": "年代は公表されます。",
+  "SetBirthday": "設定は編集の生年月日で行います。",
+  "ImgSelected" : "写真を選択する",
+  "TravelBookmark": "旅のしおり（スポット）",
+  "PasteImg": "旅のしおりにふさわしいスポットイメージを貼りましょう",
+  "NotFound" : "お探しのページは見つかりませんでした。",
+  "ToTopPage": "トップページへ戻る",
+  "SpotsVisited": "周遊スポット",
+  "NotFindRecommendations": "みんなのおすすめは、見つかりませんでした。",
+  "Instead": "代わりに",
+  "GoogleSearch": "Google検索",
+  "SearchSpot": "でスポットを検索できます。",
+  "GoogleSearchAny": "Googleで任意のスポットを検索できます。",
+  "ReplaceKeyword": "キーワードを入れ替えて検索してください。",
+  "includedPlan": "（これらのスポットもプランに入れることができます。）",
+  "UserPlan": "ユーザープラン",
+  "Man": "人",
+  "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。",
+  "PostList": "さんの投稿一覧",
+  "ShareLink": "リンク共有",
+  "ShareLinkPlanContents" : "このリンクを知っているユーザーとは、このプランの内容を共有できます。"
 }
