REMOJU-454 プラン作成の保存→メッセージをポップアップにする

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -186,7 +186,8 @@
   "EditPlanConfirmText": "Do you want to save your changes?",
   "Close": "Close",
   "Open": "Open",
-  "PlanSaved": "saved",
+  "PlanSavedConfirmTitle": "プランをマイページに保存しました。",
+  "PlanSavedConfirmButton": "マイプラン一覧へ",
   "PlanClearConfirm": "Are you sure to discard this plan?",
   "ShareYourOwnTrip": "Share your trip",
   "startTimeEx": "00:00",
