--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -186,7 +186,8 @@
   "EditPlanConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
   "Close": "閉じる",
   "Open": "広げる",
-  "PlanSaved": "プランを保存しました。",
+  "PlanSavedConfirmTitle": "プランをマイページに保存しました。",
+  "PlanSavedConfirmButton": "マイプラン一覧へ",
   "PlanClearConfirm": "このプランを本当に破棄しますか？",
   "ShareYourOwnTrip": "自分だけの旅をシェアしよう",
   "startTimeEx": "00:00",
