REMOJU-465 プラン保存後にマイプラン一覧に反映されない

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -202,8 +202,7 @@
   "Private": "Archive",
   "SelectAnAreaCategory": "Select an area category (optional)",
   "ShareYourPlanWithOtherUsers": "Share your plan with other users",
-  "CreatedPlanSaveTitle": "Your plan has been released.",
-  "CreatedPlanSaveText": "Would you like to see plans posted by other users?",
+  "PlanSave": "プランを保存しました。",
   "NoSpotName": "Not all required fields are filled.Please enter the title.",
   "NoSpot": "Manual input",
   "RegisterSpot": "Register spot",
