--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -202,8 +202,7 @@
   "Private": "非公開",
   "SelectAnAreaCategory": "エリア・こだわりも選べます",
   "ShareYourPlanWithOtherUsers": "自分のプランを他のユーザーにも共有しよう",
-  "CreatedPlanSaveTitle": "作成したプランを保存しました。",
-  "CreatedPlanSaveText": "他のユーザーが投稿したプランを見ますか？",
+  "PlanSave": "プランを保存しました。",
   "NoSpotName": "保存にはスポット名が必要です。スポット名を入力してください。",
   "NoSpot": "住所を直接入力する",
   "RegisterSpot": "スポットを登録",
