--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,8 +43,8 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "みんなのおすすめを見る",
-  "BackEveryoneRecommendations": "みんなのおすすめへ戻る",
+  "FindEveryoneRecommendations": "ベストな旅を探す・作る",
+  "BackEveryoneRecommendations": "一覧へ戻る",
   "EditPlan": "プラン編集",
   "DeletePlan": "削除する",
   "Application": "公開申請中",
