REMOJU-454 プラン作成の保存→メッセージをポップアップにする

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -224,7 +224,7 @@
   "VideoSizeError": "Video files larger than 100MB cannot be uploaded.",
   "FreeMemoEx": "Message for everyone",
   "MakeMyPlan": "Make my plan",
-  "ArragePlan": "アレンジする",
+  "ArragePlan": "プランを作成しよう",
   "SetDeparturePoint": "Origin",
   "SetDestination": "Destination",
   "PointOfDeparture": "Point of departure",
@@ -247,7 +247,7 @@
   "SpotExplanationEx": "Recommended points of the spot.",
   "FavoriteRemoveConfirm": "Are you sure to delete your favorites?",
   "FavoriteRemoved": "Deleted your favorites.",
-  "PlanName": "Title of plan",
+  "PlanName": "プラン名を入力しよう",
   "MyplanSelectPhoto": "Select a photo",
   "ReportReview": "Report inappropriate content",
   "ReportReviewConfirmTitle": "Report as inappropriate?",
@@ -302,7 +302,7 @@
   "SetBirthday": "設定は編集の生年月日で行います。",
   "ImgSelected" : "写真を選択する",
   "TravelBookmark": "旅のしおり（スポット）",
-  "PasteImg": "旅のしおりにふさわしいスポットイメージを貼りましょう",
+  "PasteImg": "プランの表紙になる写真を決めよう",
   "NotFound" : "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
   "SpotsVisited": "周遊スポット",
