--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -224,7 +224,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "プラン作成",
+  "ArragePlan": "プランを作成しよう",
   "SetDeparturePoint": "出発地の設定",
   "SetDestination": "到着地の設定",
   "PointOfDeparture": "出発地",
@@ -247,7 +247,7 @@
   "SpotExplanationEx": "ここでは何をしますか？（フリーメモ）",
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
-  "PlanName": "プラン名",
+  "PlanName": "プラン名を入力しよう",
   "MyplanSelectPhoto": "写真を選択",
   "ReportReview": "レビューを違反報告",
   "ReportReviewConfirmTitle": "不適切なレビューを報告しますか？",
@@ -302,7 +302,7 @@
   "SetBirthday": "設定は編集の生年月日で行います。",
   "ImgSelected" : "写真を選択する",
   "TravelBookmark": "旅のしおり（スポット）",
-  "PasteImg": "旅のしおりにふさわしいスポットイメージを貼りましょう",
+  "PasteImg": "プランの表紙になる写真を決めよう",
   "NotFound" : "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
   "SpotsVisited": "周遊スポット",
