--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "ベストな旅を探す・作る",
+  "FindEveryoneRecommendations": "みんなの旅行プランを見る・作る",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "EditPlan": "プラン編集",
   "DeletePlan": "削除する",
