--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -13,7 +13,7 @@
   "URL": "URL",
   "Note": "備考",
   "Budget": "予算",
-  "SuggestedTime": "滞在時間",
+  "SuggestedTime": "滞在",
   "Areas": "エリア",
   "Categories": "カテゴリ",
   "Options": "こだわり",
