--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "みんなの旅行プランを見る、作る",
+  "FindEveryoneRecommendations": "ベストな旅を探す、作る",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "EditPlan": "プラン編集",
   "DeletePlan": "削除する",
@@ -111,7 +111,7 @@
   "UserProfile": "プロフィール",
   "MyplanList": "プラン",
   "Favorite": "お気に入り",
-  "CreatePlan":"旅プランをつくる",
+  "CreatePlan": "旅プランをつくる",
   "UserProfileSaved": "プロフィールを保存しました。",
   "EditUserProfile": "プロフィールを編集",
   "EditUserProfileTitle": "公開情報",
@@ -194,7 +194,7 @@
   "EnterThePlanName": "プラン名を入れよう（最大20文字）",
   "PlanNameEx": "（例）海のきれいな街で日帰り女子旅♡",
   "PlanExplanationEx": "どんな旅にしたいですか？（フリーメモ）",
-  "labelClear":"クリア",
+  "labelClear": "クリア",
   "MemoEx": "このスポットのおすすめポイント",
   "SelectAPhoto": "写真を選択しよう（最大8枚）",
   "SaveDraft": "下書き保存",
@@ -212,15 +212,15 @@
   "ReviewPostAgree": "レビュー投稿ご利用規約に同意する。",
   "ReviewPosted": "投稿する",
   "Posted": "投稿",
-  "TitleEx":"タイトルを入力してください。",
+  "TitleEx": "タイトルを入力してください。",
   "contentsEx": "本文を入力してください。",
   "PlanDetail": "プラン詳細",
   "PlanTime": "プラン時間",
   "Age": "代",
   "PostersProfile": "投稿者のプロフィール",
-  "ReviewMore":"全##件のレビューをみる",
-  "RevireAlsoMore":"さらにみる",
-  "Continue":"続きを見る",
+  "ReviewMore": "全##件のレビューをみる",
+  "RevireAlsoMore": "さらにみる",
+  "Continue": "続きを見る",
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
@@ -263,12 +263,12 @@
   "GoogleKeyword": "住所や地名で指定してください。",
   "StartSearch": "出発地を設定",
   "EndSearch": "到着地を設定",
-  "MyPlan#Sec1":"みんなのおすすめを参考に",
-  "MyPlan#Sec2":"オリジナル休日プランが作れます。",
-  "MyPlan#Sec3":"次は、どこに行きたいですか？",
-  "MyPlan#Sec4":"又は",
-  "MyPlan#Sec5":"一覧から探す",
-  "MyPlan#notice":"※保存・共有にはログインが必要です",
+  "MyPlan#Sec1": "みんなのおすすめを参考に",
+  "MyPlan#Sec2": "オリジナル休日プランが作れます。",
+  "MyPlan#Sec3": "次は、どこに行きたいですか？",
+  "MyPlan#Sec4": "又は",
+  "MyPlan#Sec5": "一覧から探す",
+  "MyPlan#notice": "※保存・共有にはログインが必要です",
   "ReportPlanUser": "プランを違反報告",
   "ReportPlanUserConfirmTitle": "不適切なプランを報告しますか？",
   "ReportPlanUserConfirmText": "ご報告いただいたプランについて、担当者が数営業日以内に確認します。",
@@ -279,31 +279,31 @@
   "AddToPlanOnly": "ここだけプランに入れる",
   "SpotAllClearConfirm": "スポットをすべて削除します。よろしいですか？",
   "SavePlanConfirm": "プランを保存します。よろしいですか？",
-  "isEdit":"編集する",
-  "isSave":"保存する",
-  "ViewUserPost":"この投稿者の投稿一覧へ",
-  "ViewReview":"投稿したレビューを見る",
-  "NoReviewMsg":"投稿中のレビューはありません",
-  "NoPlanMsg":"作成中のプランはありません",
+  "isEdit": "編集する",
+  "isSave": "保存する",
+  "ViewUserPost": "この投稿者の投稿一覧へ",
+  "ViewReview": "投稿したレビューを見る",
+  "NoReviewMsg": "投稿中のレビューはありません",
+  "NoPlanMsg": "作成中のプランはありません",
   "LogoutConfirmTitle": "ログアウトしますか？(未保存のプランがあります)",
   "LogoutConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
   "NearestSt": "最寄駅",
-  "SearchGuide": "「温泉」「京都女子旅」..." ,
+  "SearchGuide": "「温泉」「京都女子旅」...",
   "CreateNew": "新規作成する",
   "LoginConfirmTitle": "プランの保存には、ログインが必要です。ログイン画面(ユーザ登録画面)に移動しますか？",
   "RequiredPlanName": "プラン名を入力してください。",
-  "InplanCount":"プランに入れた人",
-  "ReviewRate":"レビュー",
+  "InplanCount": "プランに入れた人",
+  "ReviewRate": "レビュー",
   "AutoSearchConfirmTitle": "最短ルートを検索します。よろしいですか？",
   "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
   "ErrorMsgAuto": "最短ルートの検索には4スポット以上必要です。",
   "Optimized": "最適化済です。",
   "AgeAnnounced": "年代は公表されます。",
   "SetBirthday": "設定は編集の生年月日で行います。",
-  "ImgSelected" : "写真を選択する",
+  "ImgSelected": "写真を選択する",
   "TravelBookmark": "旅のしおり（スポット）",
   "PasteImg": "プランの表紙になる写真を決めよう",
-  "NotFound" : "お探しのページは見つかりませんでした。",
+  "NotFound": "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
   "SpotsVisited": "周遊スポット",
   "NotFindRecommendations": "みんなのおすすめは、見つかりませんでした。",
@@ -318,7 +318,8 @@
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。",
   "PostList": "さんの投稿一覧",
   "ShareLink": "リンク共有",
-  "ShareLinkPlanContents" : "このリンクを知っているユーザーとは、このプランの内容を共有できます。",
+  "ShareLinkPlanContents": "このリンクを知っているユーザーとは、このプランの内容を共有できます。",
   "LoginMessage": "ログインしました",
-  "PictureMemo": "写真のコメント"
+  "PictureMemo": "写真のコメント",
+  "Hedtitle": "はじめての方へ"
 }
