--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -224,7 +224,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "プランを作成しよう",
+  "ArragePlan": "プラン箱",
   "SetDeparturePoint": "出発地の設定",
   "SetDestination": "到着地の設定",
   "PointOfDeparture": "出発地",
@@ -288,7 +288,7 @@
   "LogoutConfirmTitle": "ログアウトしますか？(未保存のプランがあります)",
   "LogoutConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
   "NearestSt": "最寄駅",
-  "SearchGuide": "「温泉」「京都女子旅」...",
+  "SearchGuide": "「東京タワー」「インスタ映え」...",
   "CreateNew": "新規作成する",
   "LoginConfirmTitle": "プランの保存には、ログインが必要です。ログイン画面(ユーザ登録画面)に移動しますか？",
   "RequiredPlanName": "プラン名を入力してください。",
