--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -321,5 +321,6 @@
   "ShareLinkPlanContents" : "このリンクを知っているユーザーとは、このプランの内容を共有できます。",
   "LoginMessage": "ログインしました",
   "PictureMemo": "写真のコメント",
-  "Hedtitle": "はじめての方へ"
+  "Hedtitle": "はじめての方へ",
+  "WhereToLook": "探す先"
 }
