--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -301,7 +301,7 @@
   "AgeAnnounced": "年代は公表されます。設定は編集の生年月日で行います。",
   "SetBirthday": "設定は編集の生年月日で行います。",
   "ImgSelected" : "写真を選択する",
-  "TravelBookmark": "旅のしおり（スポット）",
+  "TravelBookmark": "プラン概要",
   "PasteImg": "プランの表紙になる写真を決めよう",
   "NotFound" : "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
