--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -193,7 +193,7 @@
   "startTimeEx": "00:00",
   "EnterThePlanName": "プラン名を入れよう（最大20文字）",
   "PlanNameEx": "（例）海のきれいな街で日帰り女子旅♡",
-  "PlanExplanationEx": "どんな旅にしたいですか？（フリーメモ）",
+  "PlanExplanationEx": "このプランのポイントや内容を書きましょう（フリーコメント）",
   "labelClear": "クリア",
   "MemoEx": "このスポットのおすすめポイント",
   "SelectAPhoto": "写真を選択しよう（最大8枚）",
@@ -248,7 +248,7 @@
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
   "PlanName": "プラン名を入力しよう",
-  "MyplanSelectPhoto": "写真を選択",
+  "MyplanSelectPhoto": "写真選択",
   "ReportReview": "レビューを違反報告",
   "ReportReviewConfirmTitle": "不適切なレビューを報告しますか？",
   "ReportReviewConfirmText": "ご報告いただいたレビューについて、担当者が数営業日以内に確認します。",
@@ -301,8 +301,8 @@
   "AgeAnnounced": "年代は公表されます。",
   "SetBirthday": "設定は編集の生年月日で行います。",
   "ImgSelected": "写真を選択する",
-  "TravelBookmark": "旅のしおり（スポット）",
-  "PasteImg": "プランの表紙になる写真を決めよう",
+  "TravelBookmark": "プラン概要",
+  "PasteImg": "プランの表紙に貼る写真を決めます",
   "NotFound": "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
   "SpotsVisited": "周遊スポット",
