--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -263,8 +263,8 @@
   "GoogleKeyword": "住所や地名で指定してください。",
   "StartSearch": "出発地を設定",
   "EndSearch": "到着地を設定",
-  "MyPlan#Sec1": "みんなのおすすめを参考に",
-  "MyPlan#Sec2": "オリジナル休日プランが作れます。",
+  "MyPlan#Sec1": "みんなのベストな旅を参考に、",
+  "MyPlan#Sec2": "あなたのベストな旅を作りましょう。",
   "MyPlan#Sec3": "次は、どこに行きたいですか？",
   "MyPlan#Sec4": "又は",
   "MyPlan#Sec5": "一覧から探す",
