--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -244,7 +244,7 @@
   "PrivateSaved": "非公開にしました",
   "DuringRouteCalculation": "経路計算中・・・",
   "SpotNameEx": "スポット名",
-  "SpotExplanationEx": "ここでは何をしますか？（フリーメモ）",
+  "SpotExplanationEx": "このスポットのポイントや内容を書きましょう（フリーコメント）",
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
   "PlanName": "プラン名を入力しよう",
@@ -303,6 +303,7 @@
   "ImgSelected": "写真を選択する",
   "TravelBookmark": "プラン概要",
   "PasteImg": "プランの表紙に貼る写真を決めます",
+  "PasteImgSpot": "スポットの写真を追加します",
   "NotFound": "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
   "SpotsVisited": "周遊スポット",
@@ -322,5 +323,6 @@
   "LoginMessage": "ログインしました",
   "PictureMemo": "写真のコメント",
   "Hedtitle": "はじめての方へ",
-  "WhereToLook": "探す先"
+  "WhereToLook": "探す先",
+  "SpotOverview": "スポット概要"
 }
