REMOJU-485 小黒さん課題007 014

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -193,7 +193,7 @@
   "startTimeEx": "00:00",
   "EnterThePlanName": "Enter the plan title (up to 20 characters)",
   "PlanNameEx": "Enter the plan title",
-  "PlanExplanationEx": "Enter the recommended points for the entire plan",
+  "PlanExplanationEx": "プランのポイントや内容を書こう",
   "labelClear":"Clear",
   "MemoEx": "Enter recommended points",
   "SelectAPhoto": "Select a photo (up to 8)",
@@ -302,7 +302,7 @@
   "SetBirthday": "設定は編集の生年月日で行います。",
   "ImgSelected" : "写真を選択する",
   "TravelBookmark": "プラン概要",
-  "PasteImg": "プランの表紙になる写真を決めよう",
+  "PasteImg": "プランの表紙写真を選ぼう",
   "PasteImgSpot": "スポットの写真を追加します",
   "NotFound" : "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
