--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -193,8 +193,8 @@
   "startTimeEx": "00:00",
   "EnterThePlanName": "プラン名を入れよう（最大20文字）",
   "PlanNameEx": "（例）海のきれいな街で日帰り女子旅♡",
-  "PlanExplanationEx": "このプランのポイントや内容を書きましょう（フリーコメント）",
-  "labelClear": "クリア",
+  "PlanExplanationEx": "プランのポイントや内容を書こう",
+  "labelClear": "全削除",
   "MemoEx": "このスポットのおすすめポイント",
   "SelectAPhoto": "写真を選択しよう（最大8枚）",
   "SaveDraft": "下書き保存",
@@ -277,7 +277,7 @@
   "Max6spots": "最大６ヶ所",
   "Option": "※オプション",
   "AddToPlanOnly": "ここだけプランに入れる",
-  "SpotAllClearConfirm": "スポットをすべて削除します。よろしいですか？",
+  "SpotAllClearConfirm": "スポットを全て削除します。よろしいですか？",
   "SavePlanConfirm": "プランを保存します。よろしいですか？",
   "isEdit": "編集する",
   "isSave": "保存する",
@@ -302,7 +302,7 @@
   "SetBirthday": "設定は編集の生年月日で行います。",
   "ImgSelected": "写真を選択する",
   "TravelBookmark": "プラン概要",
-  "PasteImg": "プランの表紙に貼る写真を決めます",
+  "PasteImg": "プランの表紙写真を選ぼう",
   "PasteImgSpot": "スポットの写真を追加します",
   "NotFound": "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
