--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -200,7 +200,7 @@
   "SaveDraft": "下書き保存",
   "Release": "公開",
   "Private": "非公開",
-  "SelectAnAreaCategory": "エリア・こだわりも選べます",
+  "SelectAnAreaCategory": "エリアを選ぼう",
   "ShareYourPlanWithOtherUsers": "自分のプランを他のユーザーにも共有しよう",
   "PlanSave": "プランを保存しました。",
   "NoSpotName": "保存にはスポット名が必要です。スポット名を入力してください。",
@@ -326,5 +326,7 @@
   "WhereToLook": "探す先",
   "SpotOverview": "スポット概要",
   "ErrorMsgSetTransferCar": "1つのプランに保存できるスポット数は、車の場合、最大10スポットです。(出発地・到着地を含む)",
-  "ErrorMsgSetTransferEkitan": "1つのプランに保存できるスポット数は、公共交通機関の場合、最大8スポットです。(出発地・到着地を含む)"
+  "ErrorMsgSetTransferEkitan": "1つのプランに保存できるスポット数は、公共交通機関の場合、最大8スポットです。(出発地・到着地を含む)",
+  "ReleaseDestination": "共有先",
+  "ErrorMsgNoSpot": "スポットを追加してください。"
 }
