--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -328,5 +328,6 @@
   "ErrorMsgSetTransferCar": "1つのプランに保存できるスポット数は、車の場合、最大10スポットです。(出発地・到着地を含む)",
   "ErrorMsgSetTransferEkitan": "1つのプランに保存できるスポット数は、公共交通機関の場合、最大8スポットです。(出発地・到着地を含む)",
   "ReleaseDestination": "共有先",
-  "ErrorMsgNoSpot": "スポットを追加してください。"
+  "ErrorMsgNoSpot": "スポットを追加してください。",
+  "CopyPlan": "プランコピー"
 }
